examples/fail/lexer/invalid_binary_empty.bina
// EXPECT_LEXER_ERROR: invalid binary literal
fn main() -> int {
    let x = 0b;
    return 0;
}
